Fix bug phan client logo

--- a/index.html
+++ b/index.html
@@ -95,26 +95,40 @@
                         <p class="desc">5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="images">
-                        <img
-                            src="./assets/img/clients-logo-1.svg"
-                            alt="Clients 1"
-                        />
-                        <img
-                            src="./assets/img/clients-logo-2.svg"
-                            alt="Clients 2"
-                        />
-                        <img
-                            src="./assets/img/clients-logo-3.svg"
-                            alt="Clients 3"
-                        />
-                        <img
-                            src="./assets/img/clients-logo-4.svg"
-                            alt="Clients 4"
-                        />
-                        <img
-                            src="./assets/img/clients-logo-5.svg"
-                            alt="Clients 5"
-                        />
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients-logo-1.svg"
+                                alt="Clients 1"
+                            />
+                        </a>
+
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients-logo-2.svg"
+                                alt="Clients 2"
+                            />
+                        </a>
+
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients-logo-3.svg"
+                                alt="Clients 3"
+                            />
+                        </a>
+
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients-logo-4.svg"
+                                alt="Clients 4"
+                            />
+                        </a>
+
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients-logo-5.svg"
+                                alt="Clients 5"
+                            />
+                        </a>
                     </div>
                 </div>
             </div>
