cai thien phan header ( sticky)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </head>
     <body>
         <main>
-            <!-- Header -->
-            <header class="header">
+            <header class="header-fixed">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
@@ -47,7 +46,12 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-                    <!-- Hero -->
+                </div>
+            </header>
+
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -70,7 +74,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Cilents -->
             <div class="clients">
