--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/besniks.svg" alt="Besnik." />
+                        <a href="#"
+                            ><img src="./assets/img/besniks.svg" alt="Besnik."
+                        /></a>
 
                         <!-- Navigation -->
                         <ul>
