sua loi phan header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main>
+        <main id="home">
             <header class="header-fixed">
                 <div class="content">
                     <nav class="navbar">
@@ -35,11 +35,11 @@
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Feature</a></li>
-                            <li><a href="#!">Service</a></li>
-                            <li><a href="#!">Resource</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#feature">Feature</a></li>
+                            <li><a href="#service">Service</a></li>
+                            <li><a href="#resource">Resource</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- Action -->
 
@@ -140,7 +140,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div id="service" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -206,7 +206,7 @@
             </div>
 
             <!-- Featured -->
-            <div class="featured">
+            <div id="feature" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -351,7 +351,7 @@
                 </div>
             </div>
             <!-- Stats -->
-            <div class="stats">
+            <div id="resource" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -525,7 +525,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subscription">
+            <div id="contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
